--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                                         <li><a href="@Url.Action("Index", "Services")">Trang dịch vụ</a></li>
                                         <li><a href="@Url.Action("Index", "BlogPosts")">Trang bài viết</a></li>
                                         <li><a href="@Url.Action("Index", "Products")">Trang sản phẩm</a></li>
-                                        <li><a href="widgets.html">Trang khuyễn mãi</a></li>
+                                        <li><a href="@Url.Action("Index", "Discounts")">Trang khuyễn mãi</a></li>
                                         <li><a href="invoice.html">Invoice</a></li>
                                        
                                     </ul>
@@ -95,7 +95,7 @@
                                         <li><a href="@Url.Action("Index", "ServiceCategories")">Danh mục dịch vụ</a></li>
                                         <li><a href="@Url.Action("Index", "BlogCategories")">Danh mục tin tức</a></li>
                                         <li><a href="@Url.Action("Index", "ProductCategories")">Danh mục sản phẩm</a></li>
-                                        <li><a href="tables_dynamic.html">Danh mục bác sĩ</a></li>
+                                        <li><a href="@Url.Action("Index", "DoctorsCategories")">Danh mục bác sĩ</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -107,10 +107,10 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-clone"></i>Bố Cục Trang <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-clone"></i>Bố Cục Trang<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                                        <li><a href="fixed_footer.html">Fixed Footer</a></li>
+                                        <li><a href="@Url.Action("Index", "Faqs")">Trang FAQs</a></li>
+                                        <li><a href="fixed_footer.html">Trang Dịch Vụ nổi bật</a></li>
                                     </ul>
                                 </li>
                             </ul>
