--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -84,9 +84,7 @@
                                         <li><a href="@Url.Action("Index", "Services")">Trang dịch vụ</a></li>
                                         <li><a href="@Url.Action("Index", "BlogPosts")">Trang bài viết</a></li>
                                         <li><a href="@Url.Action("Index", "Products")">Trang sản phẩm</a></li>
-                                        <li><a href="@Url.Action("Index", "Discounts")">Trang khuyễn mãi</a></li>
-                                        <li><a href="invoice.html">Invoice</a></li>
-                                       
+                                        <li><a href="@Url.Action("Index", "Discounts")">Trang khuyễn mãi</a></li>                                                                    
                                     </ul>
                                 </li>
                                 <li>
@@ -110,7 +108,7 @@
                                     <a><i class="fa fa-clone"></i>Bố Cục Trang<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="@Url.Action("Index", "Faqs")">Trang FAQs</a></li>
-                                        <li><a href="fixed_footer.html">Trang Dịch Vụ nổi bật</a></li>
+                                        <li><a href="@Url.Action("Index", "ServiceFeatures")">Trang Dịch Vụ nổi bật</a></li>
                                     </ul>
                                 </li>
                             </ul>
