code phần chi tiết sản phảm

--- a/WebsiteDental/Views/DetailServices/DetailServices.cshtml
+++ b/WebsiteDental/Views/DetailServices/DetailServices.cshtml
@@ -1,5 +1,4 @@
-﻿
-@section Styles {
+﻿@section Styles {
     <link href="~/assets/css/DetailServices.css" rel="stylesheet">
 }
 @model WebsiteDental.Models.DetailServicesModelView
